--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fondamento&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/gdr5dye.css">
     <title>Archetypal Portrait Calculator</title>
   </head>
   <body>
